--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8"
