--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -17,13 +18,13 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.11.16",
+    "@types/react": "18.2.55",
     "@types/react-dom": "^18",
     "@types/react-router": "^5.1.20",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
