--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.14.1",
+    "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@types/node": "20.11.16",
+    "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "^18",
     "@types/react-router": "^5.1.20",
