--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "next": "14.1.0",
     "prop-types": "^15.8.1",
@@ -18,7 +19,7 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
-    "redux": "^5.0.1",
+
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
